--- a/.docker/docker-compose.yml
+++ b/.docker/docker-compose.yml
@@ -7,6 +7,8 @@ services:
         - linux/amd64
     image: laravel-azure-ci-cd-example:latest
     container_name: laravel-app
+    ports:
+      - "9000:9000"
     networks:
       - laravel-network
 
