--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,3 +31,29 @@ jobs:
       # Push the Docker image to ACR
       - name: Push Docker image to ACR
         run: docker push ${{ secrets.ACR_NAME }}.azurecr.io/laravel-azure-ci-cd-example:latest
+  deploy:
+    name: Deploy to Azure Web App
+    runs-on: ubuntu-latest
+    needs: build_and_push
+
+    steps:
+      # Log in to Azure
+      - name: Log in to Azure
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      # Deploy to Azure Web App Service
+      - name: Deploy Docker image to Azure Web App
+        run: |
+          az webapp config container set \
+            --name ${{ secrets.AZURE_WEBAPP_NAME }} \
+            --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} \
+            --docker-custom-image-name ${{ secrets.ACR_NAME }}.azurecr.io/laravel-azure-ci-cd-example:latest \
+            --docker-registry-server-url https://${{ secrets.ACR_NAME }}.azurecr.io \
+            --docker-registry-server-user ${{ secrets.ACR_USERNAME }} \
+            --docker-registry-server-password ${{ secrets.ACR_PASSWORD }}
+
+      # Restart the Web App (optional but recommended to ensure the latest image is pulled)
+      - name: Restart Azure Web App
+        run: az webapp restart --name ${{ secrets.AZURE_WEBAPP_NAME }} --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }}
