--- a/.docker/nginx/nginx.conf
+++ b/.docker/nginx/nginx.conf
@@ -7,7 +7,7 @@ http {
         listen 80;
         server_name localhost;
 
-        root /var/www/html/public; # Laravel's public directory
+        root /var/www/html/public;
         index index.php index.html;
 
         location / {
@@ -16,7 +16,7 @@ http {
 
         location ~ \.php$ {
             include fastcgi_params;
-            fastcgi_pass app:9000; # Forward PHP requests to the app container
+            fastcgi_pass laravel-app:9000;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         }
 
