--- a/kubernetes-manifest.yaml
+++ b/kubernetes-manifest.yaml
@@ -23,7 +23,6 @@ spec:
       imagePullSecrets:
       - name: acr-laravel-creds
 ---
-# 2. Laravel Service
 apiVersion: v1
 kind: Service
 metadata:
@@ -54,8 +53,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: localhost
-    http:
+  - http:
       paths:
       - path: /
         pathType: Prefix
