--- a/kubernetes-manifest.yaml
+++ b/kubernetes-manifest.yaml
@@ -17,6 +17,7 @@ spec:
       containers:
       - name: laravel-app
         image: felpslaravelstore.azurecr.io/laravel-azure-ci-cd-example:latest
+        imagePullPolicy: Always
         ports:
         - containerPort: 9000
         name: fastcgi
@@ -40,7 +41,9 @@ kind: ConfigMap
 metadata:
   name: fastcgi-config
 data:
-  SCRIPT_FILENAME: "/var/www/html/public/index.php"
+  SCRIPT_FILENAME: /var/www/html/public/$fastcgi_script_name
+  DOCUMENT_ROOT: /var/www/html/public
+  SCRIPT_NAME: $fastcgi_script_name
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
@@ -48,6 +51,7 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/backend-protocol: "FCGI"
     nginx.ingress.kubernetes.io/fastcgi-index: "index.php"
+    nginx.ingress.kubernetes.io/rewrite-target: /
     nginx.ingress.kubernetes.io/fastcgi-params-configmap: "fastcgi-config"
   name: ingress-laravel
 spec:
