--- a/kubernetes-manifest.yaml
+++ b/kubernetes-manifest.yaml
@@ -52,6 +52,7 @@ metadata:
     nginx.ingress.kubernetes.io/backend-protocol: "FCGI"
     nginx.ingress.kubernetes.io/fastcgi-index: "index.php"
     nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/add-base-url: "true"
     nginx.ingress.kubernetes.io/fastcgi-params-configmap: "fastcgi-config"
   name: ingress-laravel
 spec:
