Changed Apache port to 80 and updated Kubernetes deployment

--- a/.docker/config/apache.conf
+++ b/.docker/config/apache.conf
@@ -1,4 +1,5 @@
 <VirtualHost *:8080>
+    # Set the public directory as the document root
     DocumentRoot /var/www/html/public
     ServerName localhost
 
